--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -53,8 +53,8 @@ jobs:
         name: Lint file names under ./prove
         with:
           path: "./prove"
-          pattern: '^(\.gitkeep)|((scritto|totale|parziale\d|orale(\d?)|progetto(\d?))-\d{4}(-\d{2}-\d{2})?(-[a-z0-9]+)?-(testo|soluzione)(-[a-z0-9]+)?\.[a-zA-Z0-9]+)$'
-          recursive: "true"
+          pattern: '^(\.gitkeep)|((scritto)-\d{4}(-\d{2}-\d{2})?(-[a-z0-9]+)?-(testo(\.[a-zA-Z0-9]+))?|soluzione(-[a-z0-9]+)?)$'
+          recursive: "false"
       - uses: csunibo/lint-filenames@v1.3.2
         name: Lint file names under ./varie
         with:
